--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,9 @@
+parameters:
+    glifery.entity_hidden_type.form_type.class: Glifery\EntityHiddenTypeBundle\Form\Type\EntityHiddenType
+
 services:
-#    glifery_entity_hidden_type.example:
-#        class: Glifery\EntityHiddenTypeBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    glifery.entity_hidden_type.form_type:
+        class: %glifery.entity_hidden_type.form_type.class%
+        arguments: ["@doctrine.orm.entity_manager"]
+        tags:
+        - { name: form.type, alias: entity_hidden }
