--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "MIT"
     ],
     "require" : {
+        "php": ">=5.3.0",
+        "symfony/symfony": "2.3.*"
     },
     "autoload" : {
         "psr-0" : {
@@ -24,7 +26,7 @@
     }],
     "extra" : {
         "branch-alias" : {
-            "dev-master" : "1.0.0-dev"
+            "dev-master" : "1.0-dev"
         }
     }
 }
