--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require" : {
         "php": ">=5.3.0",
-        "symfony/symfony": "2.3.*"
+        "symfony/symfony": ">=2.3.0"
     },
     "autoload" : {
         "psr-0" : {
