--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-release/2.0": "2.0-dev"
+            "dev-master": "2.1-dev"
         }
     },
     "minimum-stability": "dev",
