--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/dependency-injection": "~2.8|~3.0",
         "symfony/form": "~2.8|~3.0",
         "symfony/options-resolver": "~2.8|~3.0",
+        "symfony/property-access": "~2.8|~3.0",
 
         "doctrine/orm": "~2.5",
         "doctrine/common": "~2.6"
