--- a/src/Resources/config/form.yml
+++ b/src/Resources/config/form.yml
@@ -1,6 +1,6 @@
 services:
     shapecode_hidden_entity_type.form_type.object:
-        class: \Shapecode\Bundle\HiddenEntityTypeBundle\Form\Type\HiddenObjectType
+        class: Shapecode\Bundle\HiddenEntityTypeBundle\Form\Type\HiddenObjectType
         arguments: ["@doctrine"]
         tags:
             - { name: form.type }
