--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "hidden",
         "form",
         "type",
+        "shapecode",
         "symfony"
     ],
     "type": "symfony-bundle",
@@ -31,17 +32,17 @@
     "require": {
         "php": "^7.1",
 
-        "symfony/framework-bundle": "^2.8|^3.0|^4.0",
-        "symfony/config": "^2.8|^3.0|^4.0",
-        "symfony/http-kernel": "^2.8|^3.0|^4.0",
-        "symfony/dependency-injection": "^2.8|^3.0|^4.0",
-        "symfony/form": "^2.8|^3.0|^4.0",
-        "symfony/options-resolver": "^2.8|^3.0|^4.0",
-        "symfony/property-access": "^2.8|^3.0|^4.0",
+        "symfony/framework-bundle": "^3.4|^4.0",
+        "symfony/config": "^3.4|^4.0",
+        "symfony/http-kernel": "^3.4|^4.0",
+        "symfony/dependency-injection": "^3.4|^4.0",
+        "symfony/form": "^3.4|^4.0",
+        "symfony/options-resolver": "^3.4|^4.0",
+        "symfony/property-access": "^3.4|^4.0",
 
         "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/orm": "^2.5",
-        "doctrine/common": "^2.6"
+        "doctrine/orm": "^2.6",
+        "doctrine/common": "^2.8"
     },
     "autoload": {
         "psr-4": {
