--- a/src/Resources/config/form.yml
+++ b/src/Resources/config/form.yml
@@ -1,4 +1,7 @@
 services:
-    Shapecode\Bundle\HiddenEntityTypeBundle\Form\Type\HiddenObjectType:
-        arguments: ["@doctrine"]
-        tags: [form.type]
+    _defaults:
+        autowire: true
+        autoconfigure: true
+        public: false
+
+    Shapecode\Bundle\HiddenEntityTypeBundle\Form\Type\HiddenObjectType: ~
