--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/http-kernel": "^3.4|^4.0",
         "symfony/dependency-injection": "^3.4|^4.0",
         "symfony/form": "^3.4|^4.0",
+        "symfony/yaml": "^3.4|^4.0",
         "symfony/options-resolver": "^3.4|^4.0",
         "symfony/property-access": "^3.4|^4.0",
 
