--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "authors": [
         {
             "name": "Nikita Loges",
-            "homepage": "http://nikita-loges.de",
-            "email": "develop@nikita-loges.de"
+            "homepage": "https://loges.one",
+            "email": "dev@loges.one"
         },
         {
             "name": "Glifery",
