--- a/composer.json
+++ b/composer.json
@@ -44,10 +44,31 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/common": "^2.8"
     },
+    "require-dev": {
+        "doctrine/coding-standard": "^6.0",
+        "roave/security-advisories": "dev-master",
+        "squizlabs/php_codesniffer": "^3.4",
+        "phpstan/phpstan": "^0.11.16",
+        "phpstan/phpstan-deprecation-rules": "^0.11.2",
+        "phpstan/phpstan-phpunit": "^0.11.2",
+        "phpstan/phpstan-strict-rules": "^0.11.1",
+        "maglnet/composer-require-checker": "^2.0"
+    },
     "autoload": {
         "psr-4": {
             "Shapecode\\Bundle\\HiddenEntityTypeBundle\\": "src/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@crc",
+            "@cs-check",
+            "@phpstan"
+        ],
+        "phpstan": "./vendor/bin/phpstan analyse ./src",
+        "crc": "./vendor/bin/composer-require-checker --config-file=./composer-require-checker.json",
+        "cs-fix": "./vendor/bin/phpcbf",
+        "cs-check": "./vendor/bin/phpcs -s"
     },
     "extra": {
         "branch-alias": {
