--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "symfony/yaml": "^3.4|^4.0",
         "symfony/options-resolver": "^3.4|^4.0",
         "symfony/property-access": "^3.4|^4.0",
+        "symfony/property-info": "^3.4|^4.0",
 
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/persistence": "^1.0",
