--- a/composer.json
+++ b/composer.json
@@ -30,21 +30,22 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
 
-        "symfony/framework-bundle": "^3.4|^4.0",
-        "symfony/config": "^3.4|^4.0",
-        "symfony/http-kernel": "^3.4|^4.0",
-        "symfony/dependency-injection": "^3.4|^4.0",
-        "symfony/form": "^3.4|^4.0",
-        "symfony/yaml": "^3.4|^4.0",
-        "symfony/options-resolver": "^3.4|^4.0",
-        "symfony/property-access": "^3.4|^4.0",
-        "symfony/property-info": "^3.4|^4.0",
+        "symfony/framework-bundle": "^4.4|^5.0",
+        "symfony/config": "^4.4|^5.0",
+        "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/dependency-injection": "^4.4|^5.0",
+        "symfony/form": "^4.4|^5.0",
+        "symfony/yaml": "^4.4|^5.0",
+        "symfony/options-resolver": "^4.4|^5.0",
+        "symfony/property-access": "^4.4|^5.0",
+        "symfony/property-info": "^4.4|^5.0",
 
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/persistence": "^1.0",
-        "doctrine/common": "^2.8"
+        "doctrine/common": "^2.8",
+        "webmozart/assert": "^1.5"
     },
     "require-dev": {
         "doctrine/coding-standard": "^6.0",
@@ -55,7 +56,8 @@
         "phpstan/phpstan-phpunit": "^0.11.2",
         "phpstan/phpstan-strict-rules": "^0.11.1",
         "maglnet/composer-require-checker": "^2.0",
-        "phpunit/phpunit": "^8.4"
+        "phpunit/phpunit": "^8.4",
+        "symfony/var-dumper": "^4.3"
     },
     "autoload": {
         "psr-4": {
@@ -70,6 +72,7 @@
     "scripts": {
         "check": [
             "@crc",
+            "@cs-fix",
             "@cs-check",
             "@phpstan"
         ],
@@ -81,7 +84,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.2-dev"
+            "dev-master": "4.0-dev"
         }
     },
     "minimum-stability": "dev",
