--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "symfony/property-access": "^3.4|^4.4|^5.0",
         "symfony/property-info": "^3.4|^4.4|^5.0",
 
-        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-bundle": "^1.6|^2.0",
         "doctrine/persistence": "^1.0",
         "doctrine/common": "^2.8",
         "webmozart/assert": "^1.5"
