--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "webmozart/assert": "^1.5"
     },
     "require-dev": {
-        "doctrine/coding-standard": "^6.0",
+        "icanhazstring/composer-unused": "~0.7",
+        "doctrine/coding-standard": "^7.0",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^3.4",
         "phpstan/phpstan": "^0.11.16",
@@ -72,15 +73,15 @@
     "scripts": {
         "check": [
             "@crc",
-            "@cs-fix",
             "@cs-check",
-            "@phpstan"
+            "@phpstan",
+            "@phpunit"
         ],
         "phpstan": "./vendor/bin/phpstan analyse ./src",
         "crc": "./vendor/bin/composer-require-checker --config-file=./composer-require-checker.json",
         "phpunit": "./vendor/bin/phpunit",
-        "cs-fix": "./vendor/bin/phpcbf",
-        "cs-check": "./vendor/bin/phpcs -s"
+        "cs-fix": "./vendor/bin/phpcbf -sp",
+        "cs-check": "./vendor/bin/phpcs -sp"
     },
     "extra": {
         "branch-alias": {
