--- a/composer.json
+++ b/composer.json
@@ -42,13 +42,13 @@
         "symfony/property-access": "^3.4|^4.4|^5.0",
         "symfony/property-info": "^3.4|^4.4|^5.0",
 
-        "doctrine/persistence": "^1.0",
-        "doctrine/common": "^2.8",
-        "webmozart/assert": "^1.5"
+        "doctrine/persistence": "^1.3|^2.0",
+        "doctrine/common": "^2.13|^3.0",
+        "webmozart/assert": "^1.9"
     },
     "require-dev": {
         "icanhazstring/composer-unused": "~0.7",
-        "doctrine/coding-standard": "^7.0",
+        "doctrine/coding-standard": "^8.0",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^3.4",
         "phpstan/phpstan": "~0.11",
@@ -57,7 +57,7 @@
         "phpstan/phpstan-strict-rules": "~0.11",
         "phpstan/phpstan-webmozart-assert": "~0.12",
         "maglnet/composer-require-checker": "^2.0",
-        "phpunit/phpunit": "^8.4",
+        "phpunit/phpunit": "^9.2",
         "symfony/var-dumper": "^4.4|^5.0"
     },
     "autoload": {
@@ -85,7 +85,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "4.0-dev"
+            "dev-master": "4.2-dev"
         }
     },
     "minimum-stability": "dev",
