--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.4",
 
         "symfony/framework-bundle": "^3.4|^4.4|^5.0",
         "symfony/config": "^3.4|^4.4|^5.0",
@@ -43,18 +43,17 @@
         "symfony/property-info": "^3.4|^4.4|^5.0",
 
         "doctrine/persistence": "^1.3|^2.0",
-        "doctrine/common": "^2.13|^3.0",
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
         "icanhazstring/composer-unused": "~0.7",
-        "doctrine/coding-standard": "^8.0",
+        "doctrine/coding-standard": "^8.2",
         "roave/security-advisories": "dev-master",
-        "squizlabs/php_codesniffer": "^3.4",
-        "phpstan/phpstan": "~0.11",
-        "phpstan/phpstan-deprecation-rules": "~0.11",
-        "phpstan/phpstan-phpunit": "~0.11",
-        "phpstan/phpstan-strict-rules": "~0.11",
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpstan/phpstan": "~0.12",
+        "phpstan/phpstan-deprecation-rules": "~0.12",
+        "phpstan/phpstan-phpunit": "~0.12",
+        "phpstan/phpstan-strict-rules": "~0.12",
         "phpstan/phpstan-webmozart-assert": "~0.12",
         "maglnet/composer-require-checker": "^2.0",
         "phpunit/phpunit": "^9.2",
@@ -73,20 +72,27 @@
     "scripts": {
         "check": [
             "@crc",
+            "@unuse",
+            "@cs-fix",
             "@cs-check",
             "@phpstan",
             "@phpunit"
         ],
-        "phpstan": "./vendor/bin/phpstan analyse ./src",
-        "crc": "./vendor/bin/composer-require-checker --config-file=./composer-require-checker.json",
-        "phpunit": "./vendor/bin/phpunit",
-        "cs-fix": "./vendor/bin/phpcbf -sp",
-        "cs-check": "./vendor/bin/phpcs -sp"
+        "phpstan": "phpstan analyse --ansi",
+        "phpstan-update-baseline": "phpstan analyse --ansi --generate-baseline phpstan-baseline.neon",
+        "crc": "vendor/bin/composer-require-checker --config-file=./composer-require-checker.json --ansi",
+        "phpunit": "phpunit --colors=always",
+        "cs-check": "phpcs -s",
+        "cs-fix": "phpcbf",
+        "unuse": "composer unused --excludeDir=vendor --excludeDir=var --excludeDir=node_modules --ansi"
     },
     "extra": {
         "branch-alias": {
             "dev-master": "4.2-dev"
-        }
+        },
+        "unused": [
+            "symfony/framework-bundle"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true
