--- a/composer.json
+++ b/composer.json
@@ -32,15 +32,15 @@
     "require": {
         "php": "^7.4|^8.0",
 
-        "symfony/framework-bundle": "^4.4|^5.0",
-        "symfony/config": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/dependency-injection": "^4.4|^5.0",
-        "symfony/form": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0",
-        "symfony/options-resolver": "^4.4|^5.0",
-        "symfony/property-access": "^4.4|^5.0",
-        "symfony/property-info": "^4.4|^5.0",
+        "symfony/framework-bundle": "^4.4|^5.0|^6.0",
+        "symfony/config": "^4.4|^5.0|^6.0",
+        "symfony/http-kernel": "^4.4|^5.0|^6.0",
+        "symfony/dependency-injection": "^4.4|^5.0|^6.0",
+        "symfony/form": "^4.4|^5.0|^6.0",
+        "symfony/yaml": "^4.4|^5.0|^6.0",
+        "symfony/options-resolver": "^4.4|^5.0|^6.0",
+        "symfony/property-access": "^4.4|^5.0|^6.0",
+        "symfony/property-info": "^4.4|^5.0|^6.0",
 
         "doctrine/persistence": "^1.3|^2.0",
         "webmozart/assert": "^1.9"
