--- a/composer.json
+++ b/composer.json
@@ -32,15 +32,15 @@
     "require": {
         "php": "^7.4|^8.0",
 
-        "symfony/framework-bundle": "^4.4|^5.0|^6.0",
-        "symfony/config": "^4.4|^5.0|^6.0",
-        "symfony/http-kernel": "^4.4|^5.0|^6.0",
-        "symfony/dependency-injection": "^4.4|^5.0|^6.0",
-        "symfony/form": "^4.4|^5.0|^6.0",
-        "symfony/yaml": "^4.4|^5.0|^6.0",
-        "symfony/options-resolver": "^4.4|^5.0|^6.0",
-        "symfony/property-access": "^4.4|^5.0|^6.0",
-        "symfony/property-info": "^4.4|^5.0|^6.0",
+        "symfony/framework-bundle": "^4.4|^5.4|^6.0",
+        "symfony/config": "^4.4|^5.4|^6.0",
+        "symfony/http-kernel": "^4.4|^5.4|^6.0",
+        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
+        "symfony/form": "^4.4|^5.4|^6.0",
+        "symfony/yaml": "^4.4|^5.4|^6.0",
+        "symfony/options-resolver": "^4.4|^5.4|^6.0",
+        "symfony/property-access": "^4.4|^5.4|^6.0",
+        "symfony/property-info": "^4.4|^5.4|^6.0",
 
         "doctrine/persistence": "^1.3|^2.0",
         "webmozart/assert": "^1.9"
@@ -49,15 +49,16 @@
         "icanhazstring/composer-unused": "~0.7",
         "doctrine/coding-standard": "^9.0",
         "roave/security-advisories": "dev-master",
-        "squizlabs/php_codesniffer": "^3.5",
-        "phpstan/phpstan": "~0.12",
-        "phpstan/phpstan-deprecation-rules": "~0.12",
-        "phpstan/phpstan-phpunit": "~0.12",
-        "phpstan/phpstan-strict-rules": "~0.12",
-        "phpstan/phpstan-webmozart-assert": "~0.12",
-        "maglnet/composer-require-checker": "^2.0",
-        "phpunit/phpunit": "^9.2",
-        "symfony/var-dumper": "^5.0"
+        "squizlabs/php_codesniffer": "^3.6",
+        "phpstan/phpstan": "~1.2",
+        "phpstan/phpstan-deprecation-rules": "~1.0",
+        "phpstan/phpstan-phpunit": "~1.0",
+        "phpstan/phpstan-strict-rules": "~1.1",
+        "phpstan/phpstan-webmozart-assert": "~1.0",
+        "maglnet/composer-require-checker": "^4.0",
+        "phpunit/phpunit": "^9.5",
+        "symfony/var-dumper": "^6.0",
+        "phpstan/phpstan-symfony": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -95,5 +96,11 @@
         ]
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "icanhazstring/composer-unused": true
+        }
+    }
 }
