--- a/composer.json
+++ b/composer.json
@@ -30,35 +30,35 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.2",
 
-        "symfony/framework-bundle": "^4.4|^5.4|^6.0",
-        "symfony/config": "^4.4|^5.4|^6.0",
-        "symfony/http-kernel": "^4.4|^5.4|^6.0",
-        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
-        "symfony/form": "^4.4|^5.4|^6.0",
-        "symfony/yaml": "^4.4|^5.4|^6.0",
-        "symfony/options-resolver": "^4.4|^5.4|^6.0",
-        "symfony/property-access": "^4.4|^5.4|^6.0",
-        "symfony/property-info": "^4.4|^5.4|^6.0",
+        "symfony/framework-bundle": "^5.4 || ^6.4 || ^7.0",
+        "symfony/config": "^5.4 || ^6.4 || ^7.0",
+        "symfony/http-kernel": "^5.4 || ^6.4 || ^7.0",
+        "symfony/dependency-injection": "^5.4 || ^6.4 || ^7.0",
+        "symfony/form": "^5.4 || ^6.4 || ^7.0",
+        "symfony/yaml": "^5.4 || ^6.4 || ^7.0",
+        "symfony/options-resolver": "^5.4 || ^6.4 || ^7.0",
+        "symfony/property-access": "^5.4 || ^6.4 || ^7.0",
+        "symfony/property-info": "^5.4 || ^6.4 || ^7.0",
 
-        "doctrine/persistence": "^1.3|^2.0|^3.0",
+        "doctrine/persistence": "^3.0",
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
-        "icanhazstring/composer-unused": "~0.7",
-        "doctrine/coding-standard": "^9.0",
+        "icanhazstring/composer-unused": "~0.8",
+        "doctrine/coding-standard": "^12.0",
         "roave/security-advisories": "dev-master",
-        "squizlabs/php_codesniffer": "^3.6",
-        "phpstan/phpstan": "~1.2",
-        "phpstan/phpstan-deprecation-rules": "~1.0",
-        "phpstan/phpstan-phpunit": "~1.0",
-        "phpstan/phpstan-strict-rules": "~1.1",
-        "phpstan/phpstan-webmozart-assert": "~1.0",
-        "maglnet/composer-require-checker": "^4.0",
-        "phpunit/phpunit": "^9.5",
-        "symfony/var-dumper": "^6.0",
-        "phpstan/phpstan-symfony": "^1.0"
+        "squizlabs/php_codesniffer": "^3.7",
+        "phpstan/phpstan": "~1.10",
+        "phpstan/phpstan-deprecation-rules": "~1.1",
+        "phpstan/phpstan-phpunit": "~1.3",
+        "phpstan/phpstan-strict-rules": "~1.5",
+        "phpstan/phpstan-webmozart-assert": "~1.2",
+        "maglnet/composer-require-checker": "^4.7",
+        "phpstan/phpstan-symfony": "^1.3",
+        "phpunit/phpunit": "^10.5",
+        "symfony/var-dumper": "^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -74,7 +74,6 @@
         "check": [
             "@crc",
             "@unused",
-            "@cs-fix",
             "@cs-check",
             "@phpstan",
             "@phpunit"
