--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,10 +3,10 @@ name: PHP Composer
 on:
   push:
     branches:
-    - master
+      - master
   pull_request:
     branches:
-    - master
+      - master
 
 jobs:
   build:
@@ -19,6 +19,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
 
     - name: Validate composer.json and composer.lock
       run: composer validate
